--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,12 +8,12 @@ div#root {
 }
 .banner {
   display: grid;
-  height: 95vh;
+  height: 100vh;
   width: 98vw;
   background-color: #008380;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: #008380;
 }
 .text{
   position: absolute;
